# kv_store

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
store/: models.py  services.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py
