[tool.poetry]
name = "kv_store"
version = "0.1.0"
description = "Backend assignment from Issara"
authors = ["Win Htet Aung <whaung1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
